--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -674,7 +674,7 @@
 						if (type == 2) {
 							console.log("PC clicked ... ");
 							processingCenterQueue.forEach(function (element) {
-								console.log(element);
+								//console.log(element);
 								$("#PCTransactionList").append('<div class="btn btn-default processTransactionBtn" id="' + element + '"onclick="processTransactionButton('+element+')">' +
 									'Process transaction: '+element +
 									'</div>');
@@ -683,8 +683,8 @@
 						else if (type == 1) {
 							console.log("Inside the get queue function for relays:");
 							NetworkElements.nodes.forEach(function (node) {
-								console.log("Node: " + node.data.id + ", id = " + id);
-								console.log("Queue: " + node.data.queue);
+								//console.log("Node: " + node.data.id + ", id = " + id);
+								//console.log("Queue: " + node.data.queue);
 								if (node.data.id == id){
 									node.data.queue.forEach(function (item) {
 										console.log("Item: " + item);
@@ -726,6 +726,7 @@
 				if (el.data.id == (sourceIp + "" + targetIp)) {
 					console.log("CHANGING ACTIVE OF CONNECTION");
 					el.data.isActive = !el.data.isActive;
+					console.log("change: " + el.data.isActive);
 				}
 			});
 
@@ -773,19 +774,30 @@
 
 				//sets the javascript value (of isActive) to true/ false
 				var element = cy.getElementById(ip);
+				//var element = cy.$('#' + ip);
 				console.log(ip);
 				console.log(element);
 				console.log("node infomation: ",element._private.data);
 
 				//this js call updates the active/inactive in the js
-				element._private.data.isActive = !element._private.data.isActive;
+				console.log("Before the cy.element._private.isActive is changed: " + element._private.data.isActive);
+				element.data('isActive', !element._private.data.isActive);
+				console.log("After the cy.element._private.isActive is changed: " + element._private.data.isActive);
 
 				NetworkElements.nodes.forEach(function (node) {
 					//console.log(node);
 					if (node.data.id == ip) {
-						node.data.isActive = !node.data.isActive;
+						console.log("After the NetworkElement.isActive is changed: " + node.data.isActive);
+						if (node.data.isActive) {
+							//node.data.isActive = false;
+						}
+						else {
+							//node.data.isActive = true;
+						}
+						//node.data.isActive = !node.data.isActive;
+						//console.log("After the NetworkElement.isActive is changed: " + node.data.isActive);
 						//node.data.color = 'black';
-						console.log(" IP : " + ip + " is not active/inactive in js");
+						//console.log(" IP : " + ip + " is not active/inactive in js");
 					}
 				});
 
