--- a/744Project/Views/Shared/_Layout.cshtml
+++ b/744Project/Views/Shared/_Layout.cshtml
@@ -21,17 +21,18 @@
 				@Html.ActionLink("Team Saturn", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 			</div>
 			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-					<li>@Html.ActionLink("Home", "Index", "Home")</li>
-					@if (User.Identity.IsAuthenticated)
-						{
-						<li>@Html.ActionLink("Network","Index","Network")</li>
-						<!--<li>Html.ActionLink("Stores", "Index", "Stores")</li>-->
-						<li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>                
-						<li>@Html.ActionLink("Credit Cards", "Index", "CreditCards")</li>
-						<li>@Html.ActionLink("Transactions", "Index", "Transactions")</li>
-						}                    
-				</ul>
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+    {
+                <li>@Html.ActionLink("Network", "Index", "Network")</li>
+                <!--<li>Html.ActionLink("Stores", "Index", "Stores")</li>-->
+                <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
+                <li>@Html.ActionLink("Credit Cards", "Index", "CreditCards")</li>
+                <li>@Html.ActionLink("Transactions", "Index", "Transactions")</li>
+                <li>@Html.ActionLink("Regions", "Index", "Regions")</li>
+}
+                </ul>
 				@Html.Partial("_LoginPartial")
 			</div>
 		</div>
